# dyn_struct

./: Cargo.toml  LICENSE  README.md
derive/: Cargo.toml
derive/src/: lib.rs
src/: dyn_arg.rs  lib.rs
tests/: derive.rs
