[package]
name = "dyn_struct2"
version = "0.1.0"
edition = "2018"
authors = ["Jakob Hain <jakobeha@fastmail.com>", "Christofer Nolander <christofer.nolander@gmail.com>"]
repository = "https://github.com/Jakobeha/dyn_struct"
description = "Construct dynamically sized types safely. Supports arbitrary unsized types, not just slices"
license = "MIT OR Apache-2.0"

[features]
derive = ["dyn_struct_derive2"]

[dependencies]
dyn_struct_derive2 = { path = "derive", version = "0.1.0", optional = true }
transmute = "0.1.1"
