[package]
name = "dyn_struct_derive2"
version = "0.3.0"
edition = "2018"
authors = ["Jakob Hain <jakobeha@fastmail.com>", "Christofer Nolander <christofer.nolander@gmail.com>"]
repository = "https://github.com/Jakobeha/dyn_struct"
description = "Derive macros for the `dyn_struct` crate. Supports arbitrary unsized types, not just slices"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dyn_struct_derive2"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.30"
quote = "1.0.10"
syn = { version = "1.0.80", features = ["extra-traits"] }
